<resources>
    <string name="app_name">AiSD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_partition">input</string>
    <string name="empty">empty</string>
    <string name="partition_toast_write_numbers">only numbers</string>
    <string name="binary_heap_description">Max - positive numbers, Min - negative numbers. When removing the root element, the most recent element becomes the root element</string>
    <string name="nothing" />
    <string name="partition_title">Partition</string>
    <string name="binary_heap_title">Binary Heap</string>
    <string name="red_black_tree_title">Red Black Tree</string>
    <string name="b_tree">B Tree</string>
    <string name="edit_text_hint_H">H</string>
    <string name="edit_text_hint_T">T</string>
    <string name="goal_aisd">Ocena</string>
    <string name="onp_drawer_menu_title">From ONP</string>
    <string name="error_message">error</string>
    <string name="hint_plus">+</string>
    <string name="hint_minus">-</string>
    <string name="hint_multiplication">*</string>
    <string name="hint_division">/</string>
    <string name="to_onp_drawer_menu_title">To ONP</string>
</resources>