<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/partitionFragment"
            android:title="@string/partition_title"/>
        <item
            android:id="@+id/binaryHeapFragment"
            android:title="@string/binary_heap_title"/>
        <item
            android:id="@+id/redBlackTreeFragment"
            android:title="@string/red_black_tree_title"/>
        <item
            android:id="@+id/BTreeFragment"
            android:title="@string/b_tree"/>
        <item
            android:id="@+id/ONPFragment"
            android:title="@string/onp_drawer_menu_title"/>
        <item
            android:id="@+id/toONPFragment"
            android:title="@string/to_onp_drawer_menu_title"/>
    </group>
</menu>