<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.ToONPFragment">

    <EditText
        android:id="@+id/to_onp_input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="text"
        tools:ignore="LabelFor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/nothing" />

    <EditText
        android:id="@+id/to_onp_input_plus_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="number"
        tools:ignore="LabelFor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_onp_input_edit_text"
        android:autofillHints="@string/nothing"
        android:hint="@string/hint_plus"/>

    <EditText
        android:id="@+id/to_onp_input_minus_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="number"
        tools:ignore="LabelFor"
        app:layout_constraintStart_toEndOf="@+id/to_onp_input_plus_edit_text"
        app:layout_constraintTop_toBottomOf="@id/to_onp_input_edit_text"
        android:autofillHints="@string/nothing"
        android:hint="@string/hint_minus"/>

    <EditText
        android:id="@+id/to_onp_input_mult_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="number"
        tools:ignore="LabelFor"
        app:layout_constraintStart_toEndOf="@+id/to_onp_input_minus_edit_text"
        app:layout_constraintTop_toBottomOf="@id/to_onp_input_edit_text"
        android:autofillHints="@string/nothing"
        android:hint="@string/hint_multiplication"/>

    <EditText
        android:id="@+id/to_onp_input_division_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:inputType="number"
        tools:ignore="LabelFor"
        app:layout_constraintStart_toEndOf="@+id/to_onp_input_mult_edit_text"
        app:layout_constraintTop_toBottomOf="@id/to_onp_input_edit_text"
        android:autofillHints="@string/nothing"
        android:hint="@string/hint_division" />


    <TextView
        android:id="@+id/to_onp_output_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:textColor="@color/colorGrey"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintStart_toEndOf="@+id/to_onp_input_division_edit_text"
        app:layout_constraintTop_toBottomOf="@id/to_onp_input_division_edit_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_calculate_to_onp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle_button"
        android:src="@drawable/ic_confirm_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>